<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_acceuil"
            android:icon="@drawable/minus"
            android:title="@string/nav_acceuil" />
        <item
            android:id="@+id/nav_name"
            android:icon="@drawable/minus"
            android:title="@string/nav_region" />

        <item
            android:id="@+id/nav_searchNearBy"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_searchNearBy" />


        <item
            android:id="@+id/nav_db"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_db" />

        <item
            android:id="@+id/nav_detectCurrentLatLng"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_currentatLng" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/nav_settings" />


    </group>



</menu>
